# tableau-to-powerbi-migration

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  pyproject.toml
.github/agents/: pbi-migration-validator.agent.md  pbi-report-builder.agent.md  pbi-semantic-builder.agent.md  tableau-migrator.agent.md
.github/pbi.kb/: visual-cookbook.md
.github/pbi.kb/visuals/: actionButton.md  actionButton.visual.json  areaChart.md  areaChart.visual.json  azureMap.md  (+50 more)
docs/: ai-instructions-authoring-guide.md  architecture.excalidraw  capabilities-and-limitations.md  data-source-credentials.md  migration-spec.md  migration-spec.schema.json  reference-capture.md  tableau-dax-translation-guide.md
docs/showcase/: README-afterbefore.md  README-stacked.md  README.md  reference-inventory.md  showcase.json
migrations/: README.md
migrations/airline-alliance-activity/: migration-spec.json
migrations/broadway-stage-to-screen/: migration-spec.json
migrations/eea-urban-adaptation/: migration-spec.json
migrations/electricity-per-capita/: migration-spec.json
migrations/fast-fashion-impact/: migration-spec.json
migrations/health-tracker/: ai-instructions.md  migration-spec.json
migrations/interactive-resume/: migration-spec.json
migrations/price-of-prosperity/: migration-spec.json
migrations/quadruple-axis-charts/: migration-spec.json
migrations/sales-commission-model/: migration-spec.json
migrations/shipping-kpis/: migration-spec.json
migrations/spiraling-satellites/: migration-spec.json
migrations/superstore-sales-performance/: migration-spec.json
migrations/tale-of-100-entrepreneurs/: migration-spec.json
migrations/telecommunications-analytics/: migration-spec.json
migrations/wind-energy-utilization/: ai-instructions.md  migration-spec.json
scripts/: capture_tableau_reference.py  capture_tableau_screenshots.py  check_ai_readiness.py  classify_harvest_hardness.py  extract_hyper_data.py  harvest_tableau_public.py  make_carousel.py  make_demo_video.py  make_showcase.py  parse_tableau.py  preflight.ps1  preflight_source_credentials.py  probe_desktop_credential.ps1  probe_desktop_query.py  render_excalidraw.py  set_ai_instructions.py  set_data_folder.py
tests/: test_parse_tableau.py
tests/fixtures/: minimal.twb
(+1209 files in other folders)
