[project]
name = "tableau-to-pbi-migration"
version = "0.1.0"
description = "AI-assisted Tableau -> Power BI / Fabric migration toolkit"
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.2",
    "jsonschema>=4.22",
]

[project.optional-dependencies]
extract = [
    "tableauhyperapi>=0.0.19315",
]
screenshots = [
    "playwright>=1.44",
]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "pylint>=3.2",
]

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg",
    ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d",
    ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn",
    ".tox", ".venv", ".vscode", "__pypackages__", "_build",
    "buck-out", "build", "dist", "node_modules", "site-packages", "venv",
]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pylint.main]
fail-under = 10
ignore = ["CVS"]
ignore-patterns = ["^\\.#"]
jobs = 1
limit-inference-results = 100
persistent = true
py-version = "3.11"
extension-pkg-allow-list = ["lxml.etree"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
# TODO comments are a deliberate scope-tracking practice in this repo, not a defect.
disable = ["fixme"]

[tool.pylint.basic]
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
class-attribute-naming-style = "any"
class-const-naming-style = "UPPER_CASE"
class-naming-style = "PascalCase"
const-naming-style = "UPPER_CASE"
docstring-min-length = -1
function-naming-style = "snake_case"
good-names = ["i", "l", "j", "k", "ex", "Run", "_", "df", "f", "k", "v"]
inlinevar-naming-style = "any"
method-naming-style = "snake_case"
module-naming-style = "snake_case"
no-docstring-rgx = "^_"
property-classes = ["abc.abstractproperty"]
variable-naming-style = "snake_case"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
